--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_abstract_factory">Abstract Factory Pattern</string>
     <string name="title_factory">Factory Pattern</string>
     <string name="title_prototype">Prototype Pattern</string>
+    <string name="title_singleton">Singleton Pattern</string>
 
 </resources>
