add adapter pattern

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_factory">Factory Pattern</string>
     <string name="title_prototype">Prototype Pattern</string>
     <string name="title_singleton">Singleton Pattern</string>
+    <string name="title_adapter">Adapter Pattern</string>
 
 </resources>
