--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_singleton">Singleton Pattern</string>
     <string name="title_adapter">Adapter Pattern</string>
     <string name="title_bridge">Bridge Pattern</string>
+    <string name="title_composite">Composite Pattern</string>
 
 </resources>
