add decorator pattern

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_adapter">Adapter Pattern</string>
     <string name="title_bridge">Bridge Pattern</string>
     <string name="title_composite">Composite Pattern</string>
+    <string name="title_decorator">Decorator Pattern</string>
 
 </resources>
