add proxy pattern

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_bridge">Bridge Pattern</string>
     <string name="title_composite">Composite Pattern</string>
     <string name="title_decorator">Decorator Pattern</string>
-    <string name="title_facade">Faacade Pattern</string>
+    <string name="title_facade">Facade Pattern</string>
+    <string name="title_flyweight">Flyweight Pattern</string>
 
 </resources>
