--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
     <string name="title_strategy">Strategy Pattern</string>
     <string name="title_template">Template Pattern</string>
     <string name="title_visitor">Visitor Pattern</string>
+
+    <!--    Menu-->
     <string name="about">About</string>
+    <string name="libraries">Libraries</string>
+    <string name="info_design_patterns_app_icon">Design Patterns App Icon</string>
+    <string name="template_app_version" translatable="false">v%1$s</string>
+    <string name="info_design_pattern_image">Puzzle piece image as design pattern card icon</string>
 
 </resources>
