link to github repo on about page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,5 +149,6 @@
     <string name="desc_flyweight">
         A structural design pattern
     </string>
+    <string name="menu_view_source_code">View Source Code</string>
 
 </resources>
