setup immediate in app updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <!--Main Activity-->
     <string name="info_design_pattern_image">Puzzle piece image as design pattern card icon</string>
     <string name="menu_about">About</string>
+    <string name="app_update_success">Yaay! App Updated</string>
+    <string name="app_update_cancelled">App Update Cancelled</string>
+    <string name="app_update_failed">App Update Failed</string>
 
     <!--Design Pattern Detail Activity-->
     <string name="title_code_sample">Code Sample</string>
