--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,16 +34,27 @@
     <string name="info_design_patterns_app_icon">Design Patterns App Icon</string>
     <string name="template_app_version" translatable="false">v%1$s</string>
     <string name="menu_view_source_code">View Source Code</string>
+    <string name="title_privacy_policy">Privacy Policy</string>
+
 
     <!--Main Activity-->
     <string name="info_design_pattern_image">Puzzle piece image as design pattern card icon</string>
     <string name="menu_about">About</string>
+    <string name="menu_settings">Settings</string>
     <string name="app_update_success">Yaay! App Updated</string>
     <string name="app_update_cancelled">App Update Cancelled</string>
     <string name="app_update_failed">App Update Failed</string>
 
     <!--Design Pattern Detail Activity-->
     <string name="title_code_sample">Code Sample</string>
+
+    <!--Settings Activity-->
+    <string name="title_theme_preference">App Theme</string>
+    <string name="key_theme_preference" translatable="false">theme</string>
+    <string name="pref_summary_theme_system_above_q">System Default</string>
+    <string name="pref_summary_theme_system_below_q">Set By Battery Saver</string>
+    <string name="pref_summary_theme_light">Light Theme</string>
+    <string name="pref_summary_theme_dark">Dark Theme</string>
 
     <!--Design Pattern Descriptions-->
     <string name="desc_abstract_factory">
@@ -160,6 +171,6 @@
         multiple instances with different extrinsic attributes provided by the client.In this case
         the time of day.
     </string>
-    <string name="title_privacy_policy">Privacy Policy</string>
+
 
 </resources>
