--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,5 +172,14 @@
         the time of day.
     </string>
 
+    <!--Rating-->
+    <string name="info_rating_message">
+        If you found the app helpful or see aspects that could be improved on,feel free to leave us
+        some feedback on playstore and rate the app.
+    </string>
+    <string name="title_rating_dialog">App Rating</string>
+    <string name="label_dialog_negative_button">Later</string>
+    <string name="label_dialog_positive_button">Rate</string>
+
 
 </resources>
